package solid.humank.genaidemo.domain.order.model.events;

import java.time.LocalDateTime;
import java.util.UUID;

import solid.humank.genaidemo.domain.common.event.DomainEvent;
import solid.humank.genaidemo.domain.common.valueobject.Money;
import solid.humank.genaidemo.domain.common.valueobject.OrderId;
import solid.humank.genaidemo.domain.shared.valueobject.CustomerId;

/**
 * 訂單確認事件
 * 
 * 當訂單被確認時發布此事件
 * 
 * 使用 record 實作，自動獲得不可變性和基礎功能
 */
public record OrderConfirmedEvent(
        OrderId orderId,
        CustomerId customerId,
        Money totalAmount,
        UUID eventId,
        LocalDateTime occurredOn) implements DomainEvent {

    /**
     * 工廠方法，自動設定 eventId 和 occurredOn
     */
    public static OrderConfirmedEvent create(OrderId orderId,
            CustomerId customerId,
            Money totalAmount) {
        DomainEvent.EventMetadata metadata = DomainEvent.createEventMetadata();
        return new OrderConfirmedEvent(orderId, customerId, totalAmount,
                metadata.eventId(), metadata.occurredOn());
    }

    // 向後兼容的構造函數
    public OrderConfirmedEvent(
            OrderId orderId,
            CustomerId customerId,
            Money totalAmount) {
        this(orderId, customerId, totalAmount, UUID.randomUUID(), LocalDateTime.now());
    }

    @Override
    public UUID getEventId() {
        return eventId;
    }

    @Override
    public LocalDateTime getOccurredOn() {
        return occurredOn;
    }

    @Override
    public String getEventType() {
        return DomainEvent.getEventTypeFromClass(this.getClass());
    }

    @Override
    public String getAggregateId() {
        return orderId.getValue();
    }
}